<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/ar_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/launcher_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ar_button" />

    <Button
        android:id="@+id/pistol_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pistol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/launcher_button" />

    <Button
        android:id="@+id/shotgun_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/shotgun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pistol_button" />

    <Button
        android:id="@+id/sniper_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sniper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smg_button" />

    <Button
        android:id="@+id/smg_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/smg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shotgun_button" />

</androidx.constraintlayout.widget.ConstraintLayout>